--- a/contact.html
+++ b/contact.html
@@ -35,36 +35,16 @@
       margin-bottom: 20px;
     }
 
-    .contact-form {
+    .contact-info {
       background: rgba(255, 255, 255, 0.9);
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
-    .contact-form input,
-    .contact-form textarea {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
+    .contact-info p {
       font-size: 16px;
-      color: #333;
-    }
-
-    .contact-form button {
-      background-color: #ff9f9f;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .contact-form button:hover {
-      background-color: #ff6f6f;
+      margin: 10px 0;
     }
 
     footer {
@@ -92,16 +72,16 @@
 </header>
 
 <div class="content">
-  <h2>Get in Touch</h2>
-  <p>If you have any questions or want to collaborate on a project, feel free to send me a message.</p>
-  
-  <form class="contact-form" action="your-backend-script.php" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="text" name="subject" placeholder="Subject" required>
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
+  <h2>Let's Connect</h2>
+  <p>If you have any questions or just want to chat, feel free to get in touch!</p>
+
+  <div class="contact-info">
+    <h3>Contact Information</h3>
+    <p><strong>Email:</strong> <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    <p><strong>Phone:</strong> +123-456-7890</p>
+    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></p>
+    <p><strong>Twitter:</strong> <a href="https://twitter.com/yourusername" target="_blank">Your Twitter Handle</a></p>
+  </div>
 </div>
 
 <footer>
