--- a/contact.html
+++ b/contact.html
@@ -77,16 +77,16 @@
 
   <div class="contact-info">
     <h3>Contact Information</h3>
-    <p><strong>Email:</strong> <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    <p><strong>Phone:</strong> +123-456-7890</p>
-    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></p>
-    <p><strong>Twitter:</strong> <a href="https://twitter.com/yourusername" target="_blank">Your Twitter Handle</a></p>
+    <p><strong>Email:</strong> <a href="mailto:your-email@example.com">abdullaaahch@gmail.com</a></p>
+    <p><strong>Phone:</strong> +971 054 7161501</p>
+    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">https://www.linkedin.com/in/abdullaaah9605785680</a></p>
+    <p><strong>Twitter:</strong> <a href="https://instagram.com/yourusername" target="_blank">https://www.instagram.com/a6dullaaah/</a></p>
   </div>
 </div>
 
 <footer>
   <p>&copy; 2025 Abdullah. All rights reserved.</p>
-  <p>Follow me on <a href="https://twitter.com" target="_blank">Twitter</a> | <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
+  <p>Follow me on <a href="https://www.instagram.com/a6dullaaah/" target="_blank">Instagram</a></p>
 </footer>
 
 </body>
