--- a/index.html
+++ b/index.html
@@ -231,11 +231,8 @@
 <!-- Footer with Social Links and Descriptions -->
 <footer>
   <p>&copy; 2025 Abdullah. All Rights Reserved.</p>
-  <div class="social-links">
-    <a href="https://www.instagram.com/yourusername" target="_blank">Instagram</a>
-    <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-  </div>
-  <p>Follow me on Instagram and LinkedIn to see more updates and connect with me professionally.</p>
+  <p>Follow me on <a href="https://www.instagram.com/a6dullaaah/" target="_blank">Instagram</a></p>
+  <p>Follow me on Instagram to see more updates and connect with me professionally.</p>
 </footer>
 
 </body>
