--- a/about.html
+++ b/about.html
@@ -84,8 +84,9 @@
 </div>
 
 <footer>
-  <p>&copy; 2025 Abdullah. All rights reserved.</p>
-  <p>Follow me on <a href="https://twitter.com" target="_blank">Twitter</a> | <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
+  <p>&copy; 2025 Abdullah. All Rights Reserved.</p>
+  <p>Follow me on <a href="https://www.instagram.com/a6dullaaah/" target="_blank">Instagram</a></p>
+  <p>Follow me on Instagram to see more updates and connect with me professionally.</p>
 </footer>
 
 </body>
