--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
   <!-- Card 2: See My Projects (Extended Right) -->
   <div class="card">
     <div class="card-content">
-      <h3>My Projects</h3>
+      <h3>My Websites</h3>
       <p>Check out my latest work.</p>
-      <a href="projects.html">See My Projects</a>
+      <a href="projects.html">See My works</a>
     </div>
     <img src="https://cdn.prod.website-files.com/606a802fcaa89bc357508cad/61701b4e166c837543d8f0ce_2_How%20To%20a%20Create%20Personal%20Portfolio%20Website.png" alt="Projects">
   </div>
